test/parsetest/invalid/invalid_main_method2.java
class A {
  public static int main(int[] args) {

  }
}